--- a/src/components/ContactMe/contact.css
+++ b/src/components/ContactMe/contact.css
@@ -1,9 +1,11 @@
 .contact-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: black;
     color: white;
     padding: 30px;
+  
 }
 
 .contact-heading {
@@ -15,6 +17,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    max-width: 1300px;
+    width: 100%;
 }
 
 .name-container {
@@ -26,7 +30,7 @@
 }
 
 .social-container {
-   width: 100%;
+   width: 50%;
 }
 
 .name {
@@ -43,7 +47,7 @@
     padding: 10px;
 }
 .contact-me-container {
-    width: 100%;
+    width: 50%;
 }
 
 .form-container {
@@ -69,6 +73,18 @@
     outline: none;
     resize: none;
     padding-left: 15px;
+}
+.form-container > button {
+    height: 40px;
+    margin: 5px;
+    border-radius: 5px;
+    border: none;
+    background-color: crimson;
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
+    width: 30%;
+    max-width: 40%;
 }
 
 .reach-me {
