--- a/src/components/MySkills/skills.css
+++ b/src/components/MySkills/skills.css
@@ -2,6 +2,7 @@
    display: flex;
    flex-direction: column;
    justify-content: center;
+   align-items: center;
    padding: 30px;
    background-color: black;
 }
@@ -51,6 +52,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    max-width: 1300px;
 }
 
 @keyframes shake {
