--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -2,6 +2,10 @@
 
 .projects-container {
     padding: 30px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
 }
 .project-heading {
@@ -37,6 +41,7 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    max-width: 1300px;
 }
 
 .project-box > p {
