--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -75,8 +75,14 @@
 
   @media (max-width: 768px) {
     .nav-toggle {
-        background-color: white;
+        background-color: transparent;
+        border: none;
         display: block;
+        color: white;
+    }
+
+    .nvt {
+       font-size: 30px;
     }
 
     .nav-links-close {
