--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -130,13 +130,18 @@
         width: 100%;
       }
       .intro-container > h1 {
-        font-size: 3rem;
+        font-size: 2rem;
       }
       .intro-container > h4 {
         font-size: 2rem;
       }
      .iam {
-        font-size: 2rem;
+        font-size: 1.2rem;
      }
 
+     .home-container > img {
+        width: 100%;
+        height: 50vh;
+     
+     }
 }  
