--- a/src/components/MySkills/skills.css
+++ b/src/components/MySkills/skills.css
@@ -68,3 +68,24 @@
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
   }
+
+
+
+  @media (max-width: 768px) {
+    .skill-logo-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .logos-container {
+        width: 100%;
+    }
+    .skill-para-container {
+        width: 100%;
+    }
+    .skill-para-container > h2 {
+        font-size: 1.5rem;
+    }
+        
+  }
