--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -50,3 +50,9 @@
     font-size: 14px;
     text-align: center;
 }
+
+@media (max-width: 768px) {
+  .project-heading > h2 {
+    margin: 0px;
+  }
+}
