--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -7,6 +7,7 @@
 .home-container > img {
    width: 100%;
    height: 100vh;
+   object-fit: cover;
 
 }
 .navbar {
@@ -142,6 +143,8 @@
      .home-container > img {
         width: 100%;
         height: 80vh;
+        width: 100%;
+        object-fit: cover;
      
      }
 }  
