--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -18,15 +18,16 @@
 }
 .project-box {
   background-color: rgb(255, 255, 255);
-  width: 300px;
+  width: 600px;
   margin: 16px;
   border-radius: 0.6rem;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;}
 
 .project-box > img {
-    width: 300px;
+    width: 600px;
     height: 200px;
     border-radius: 0.6rem;
+    object-fit: scale-down;
 }
 
 .project-box > h3 {
@@ -50,10 +51,21 @@
     text-align: center;
 }
 
+.YgJtd {
+    width: 800px !important;
+}
+
 
 
 @media (max-width: 768px) {
   .project-heading > h2 {
     margin: 0px;
+  }
+  .project-box > img {
+    width: 300px;
+    object-fit: fill;
+  }
+  .project-box {
+    width: 300px;
   }
 }
