--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -10,16 +10,25 @@
    object-fit: cover;
 
 }
+.bg-change {
+  position: fixed !important;
+  z-index: 999 !important;
+  background-color: crimson !important;
+  transition: all 0.3s ease !important;
+  top: 0px !important;
+  
+}
 .navbar {
     position: absolute;
-    top: 0px;
+    top: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 55px;
-    background-color: rgba(58, 59, 59, 0.357);
+    background-color: rgba(58, 59, 59, 0);
+    transition: all 0.3s ease !important;
 }
 
 .nav-logo {
@@ -33,6 +42,11 @@
 .nav-links > a {
     margin: 1rem;
     color: white;
+}
+
+.nav-links > a:hover {
+  
+  text-decoration: underline;
 }
 
 .intro-container {
@@ -90,9 +104,11 @@
     .nav-toggle-active {
         background-image: linear-gradient(180deg, crimson, rgb(146, 11, 38));
         transition: all 0.2s ease-in-out;
+        border: 1px solid rgb(125, 22, 43);
     }
     .navbar {
-        height: 65px;
+        height: 60px;
+       
     }
 
     .nvt {
@@ -113,10 +129,11 @@
         top: 100%;
         left: 0;
         right: 0;
+        height: 100vh;
         margin: 0px;
         padding: 0rem; 
         z-index: 100;
-        transform: translateX(-100%);
+        transform: translateX(100%);
         transition: all 0.4s ease-in-out;
       }
 
