--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -123,7 +123,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
         background-color: rgb(0, 0, 0);
         position: absolute;
         top: 100%;
@@ -132,6 +131,7 @@
         height: 100vh;
         margin: 0px;
         padding: 0rem; 
+        padding-top: 4rem;
         z-index: 100;
         transform: translateX(100%);
         transition: all 0.4s ease-in-out;
