--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -31,6 +31,13 @@
     transition: all 0.3s ease !important;
 }
 
+.design-span {
+  font-size: 12px;
+  color: rgb(255, 255, 255);
+  font-weight: bolder;
+  
+}
+
 .nav-logo {
     margin: 1rem;
 }
@@ -81,7 +88,9 @@
     font-size: 2rem;
 }
 
-
+.nav-logo > h2 {
+  font-size: 30px;
+}
 
   .nav-toggle {
     display: none;
