--- a/src/components/ContactMe/contact.css
+++ b/src/components/ContactMe/contact.css
@@ -100,6 +100,12 @@
     cursor: pointer;            
     width: 30%;
     max-width: 60%;
+    border: 2px solid crimson;
+}
+
+.form-container > button:hover {
+    background-color: transparent;
+    transition: all 0.5 ease-in-out;
 }
 
 .reach-me {
