--- a/src/components/AboutMe/about.css
+++ b/src/components/AboutMe/about.css
@@ -98,7 +98,7 @@
         
         
     }
-    .para-container > button {
+    .skill-buttons > a > button {
         width: 50%;
     }
     .about-container {
