--- a/src/components/Journey/journey.css
+++ b/src/components/Journey/journey.css
@@ -33,4 +33,13 @@
         width: 600px !important;
         margin: 1rem !important;
     }
+
+    .hRqfVA {
+        width: 0% !important;
+    }
+    .dWNZQD {
+        left: 1px;
+        position: absolute;
+        z-index: 99;
+    }
 }
