--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,11 +1,10 @@
 
 
 .projects-container {
-    padding: 30px;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  padding: 30px;
+  text-align: -webkit-center;
+    
+    
     
 }
 .project-heading {
@@ -18,7 +17,7 @@
 }
 .project-box {
   background-color: rgb(255, 255, 255);
-  width: 300px;
+  width: 300px !important;
   margin: 16px;
   cursor: pointer;
   border: 2px solid transparent;
@@ -48,10 +47,7 @@
   
 }
 .projects {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+   text-align: center;
     max-width: 1300px;
 }
 
