--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -18,9 +18,11 @@
 .project-box {
   background-color: rgb(255, 255, 255);
   width: 300px !important;
-  height: 420px;
-  
+  height: 430px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   cursor: pointer;
+  color: black;
   border: 2px solid transparent;
   border-radius: 0.6rem;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
